feat: 添加预览风格选择器并优化预览功能

--- a/public/__dev/editor/index.html
+++ b/public/__dev/editor/index.html
@@ -220,6 +220,16 @@
                         />
                       </div>
                       <div class="script-actions">
+                        <select
+                          id="preview-style-select"
+                          class="form-control"
+                          title="预览风格"
+                          style="width: auto; padding: 4px 8px; font-size: 12px"
+                        >
+                          <option value="scratch3">Scratch 3</option>
+                          <option value="scratch3-high-contrast">S3 高对比</option>
+                          <option value="scratch2">Scratch 2</option>
+                        </select>
                         <button
                           id="toggle-layout-btn"
                           class="btn btn-sm btn-secondary"
