--- a/public/__dev/editor/index.html
+++ b/public/__dev/editor/index.html
@@ -136,6 +136,17 @@
                 </div>
 
                 <div class="form-group">
+                  <label for="meta-keywords">关键词</label>
+                  <input
+                    type="text"
+                    id="meta-keywords"
+                    class="form-control"
+                    placeholder="用逗号分隔，例如：frame rate, rendering, performance"
+                  />
+                  <small>SEO 关键词，用于搜索和元标签，用逗号分隔</small>
+                </div>
+
+                <div class="form-group">
                   <label for="meta-contributors">贡献者</label>
                   <input
                     type="text"
@@ -297,6 +308,11 @@
                 <div class="form-group">
                   <label for="i18n-tags">标签</label>
                   <input type="text" id="i18n-tags" class="form-control" placeholder="用逗号分隔" />
+                </div>
+
+                <div class="form-group">
+                  <label for="i18n-keywords">关键词</label>
+                  <input type="text" id="i18n-keywords" class="form-control" placeholder="用逗号分隔" />
                 </div>
 
                 <div class="form-group">
