新增 `关于` 页面；将图标替换为 lucide

--- a/public/__dev/editor/index.html
+++ b/public/__dev/editor/index.html
@@ -41,6 +41,7 @@
           <div class="header-top">
             <h1>模块编辑器</h1>
             <button id="sidebar-toggle" class="btn-icon" title="切换侧边栏">
+              <!-- 图标 menu -->
               <svg
                 viewBox="0 0 24 24"
                 width="24"
@@ -51,9 +52,9 @@
                 stroke-linecap="round"
                 stroke-linejoin="round"
               >
-                <line x1="3" y1="12" x2="21" y2="12"></line>
-                <line x1="3" y1="6" x2="21" y2="6"></line>
-                <line x1="3" y1="18" x2="21" y2="18"></line>
+                <path d="M4 5h16" />
+                <path d="M4 12h16" />
+                <path d="M4 19h16" />
               </svg>
             </button>
           </div>
@@ -183,6 +184,7 @@
                       <span class="icon">+</span> <span class="text">添加脚本</span>
                     </button>
                     <button id="toggle-scripts-sidebar" class="btn-icon" title="折叠/展开">
+                      <!-- 图标 menu -->
                       <svg
                         viewBox="0 0 24 24"
                         width="18"
@@ -193,9 +195,9 @@
                         stroke-linecap="round"
                         stroke-linejoin="round"
                       >
-                        <line x1="3" y1="12" x2="21" y2="12"></line>
-                        <line x1="3" y1="6" x2="21" y2="6"></line>
-                        <line x1="3" y1="18" x2="21" y2="18"></line>
+                        <path d="M4 5h16" />
+                        <path d="M4 12h16" />
+                        <path d="M4 19h16" />
                       </svg>
                     </button>
                   </div>
@@ -246,6 +248,7 @@
                           class="btn btn-sm btn-secondary"
                           title="切换布局"
                         >
+                        <!-- 图标 rows-2 -->
                           <svg
                             viewBox="0 0 24 24"
                             width="16"
@@ -256,8 +259,8 @@
                             stroke-linecap="round"
                             stroke-linejoin="round"
                           >
-                            <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
-                            <line x1="3" y1="12" x2="21" y2="12"></line>
+                            <rect width="18" height="18" x="3" y="3" rx="2" />
+                            <path d="M3 12h18" />
                           </svg>
                         </button>
                         <button id="save-script-btn" class="btn btn-sm btn-primary">保存</button>
